welcome.lessons.welcome.array.maxvalue.MaxValue.scala.error
maxValue:7: error: value k is not a member of Array[Int]
		vale = nums k;
                            ^maxValue:5: error: type mismatch;
 found   : Unit
 required: Int
for (k <- 0 to n-1) {
       ^